# lib-structs-algs

./: .gitignore  Makefile.am  README  configure.ac
src/lib/: dict.c  dlist.c  dlist.h  list.c  list.h  slist.c  slist.h
src/lib/algs/: hashing.c  hashing.h
src/lib/common/: dbg.h  helper.h
src/lib/dats/: dict.c  dict.h  dlist.c  dlist.h  list.c  list.h  slist.c  slist.h
tests/: dict_tests.c  dlist_tests.c  list_tests.c  slist_tests.c
